--- a/docs/paper.Rmd
+++ b/docs/paper.Rmd
@@ -50,7 +50,7 @@ redistributive preferences. Many ad-hoc decisions in operationalization and buil
 Some of them represent different research interests and this is valid, but in many cases they are
 not well argued and are actually wrong. Of course this is probably not only the case for studying
 meritocratic beliefs, but this can be used both for researchers studying specifically this topic and
-jcastillov@uc.cl - jc-castillo.com
+jcastillov@uc.cl - jc-castillo.com
 1
 others that deal with measurement issues in international comparisons. Validity of measures in
 cross-national research ... is not really "up to date", mostly in sociology. Restricted to survey research,
