--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -25,7 +25,7 @@ Last update: `r format(Sys.time(), "%A %d %B %Y %X")`
 
 ### Structure of the project website:
 
-- The tabs follow the logic of the [IPO protocol](https://github.com/juancarloscastillo/ipo) for academic workflows, based on three main components = **I**nput -> **P**roduction -> **O**utput. Here we show only one the main parts of each component: Data -> Analysis -> Paper. The complete reproducible files are in the [Github repo: https://juancarloscastillo.github.io/merit-scale/](https://juancarloscastillo.github.io/merit-scale/)
+- The tabs follow the logic of the [IPO protocol](https://github.com/juancarloscastillo/ipo) for academic workflows, based on three main components = **I**nput -> **P**roduction -> **O**utput. Here we show only one the main parts of each component: Data -> Analysis -> Paper. The complete reproducible files are in the [Github repo: https://juancarloscastillo.github.io/meritocracy-preferences/](https://juancarloscastillo.github.io/meritocracy-preferences/)
 
   - _Data_: pre-processing and general descriptives
   - _Analysis_: CFA (Confirmatory Factor Analysis) and measurement invariance
